Update partners logos with correct files from assets directory
- Updated Fondation MVI to Fondation Mohammed VI logo
- Updated EDGS logo to newer version (EDGS-02.png)
- Updated Avision logo to background-removed version
- Added new partner logos:
  * Marsa Maroc (background-removed version)
  * Ministère de l'Éducation Nationale (background-removed version)
- Partners section now displays 10 partner logos with proper transparent backgrounds

--- a/index.html
+++ b/index.html
@@ -2911,13 +2911,13 @@
               <img src="assets/img/partners/OCP_Group.svg.png" alt="OCP Group">
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/FONDATION_MVI_logo.jpg" alt="Fondation MVI">
+              <img src="assets/img/partners/fondation-mohammed-6-logo-png_seeklogo-315870.png" alt="Fondation Mohammed VI">
             </div>
             <div class="partner-logo">
               <img src="assets/img/partners/credit agricole du maroc .png" alt="Crédit Agricole du Maroc">
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/logo EDGS-01.png" alt="EDGS">
+              <img src="assets/img/partners/logo EDGS-02.png" alt="EDGS">
             </div>
             <div class="partner-logo">
               <img src="assets/img/partners/logo annexe hay hassani-01.png" alt="Annexe Hay Hassani">
@@ -2929,7 +2929,13 @@
               <img src="assets/img/partners/achraf hakimi vertical logo noir fr.png" alt="Achraf Hakimi Foundation">
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/A4P07-02-2025_15-36-26avision.png" alt="Avision">
+              <img src="assets/img/partners/A4P07-02-2025_15-36-26avision-removebg-preview.png" alt="Avision">
+            </div>
+            <div class="partner-logo">
+              <img src="assets/img/partners/MARSA_MAROC_LOGO_C_ENG-1-removebg-preview.png" alt="Marsa Maroc">
+            </div>
+            <div class="partner-logo">
+              <img src="assets/img/partners/Men_2021-removebg-preview.png" alt="Ministère de l'Éducation Nationale">
             </div>
           </div>
           <!-- Duplicate set for seamless infinite loop -->
@@ -2938,13 +2944,13 @@
               <img src="assets/img/partners/OCP_Group.svg.png" alt="OCP Group">
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/FONDATION_MVI_logo.jpg" alt="Fondation MVI">
+              <img src="assets/img/partners/fondation-mohammed-6-logo-png_seeklogo-315870.png" alt="Fondation Mohammed VI">
             </div>
             <div class="partner-logo">
               <img src="assets/img/partners/credit agricole du maroc .png" alt="Crédit Agricole du Maroc">
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/logo EDGS-01.png" alt="EDGS">
+              <img src="assets/img/partners/logo EDGS-02.png" alt="EDGS">
             </div>
             <div class="partner-logo">
               <img src="assets/img/partners/logo annexe hay hassani-01.png" alt="Annexe Hay Hassani">
@@ -2956,7 +2962,13 @@
               <img src="assets/img/partners/achraf hakimi vertical logo noir fr.png" alt="Achraf Hakimi Foundation">
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/A4P07-02-2025_15-36-26avision.png" alt="Avision">
+              <img src="assets/img/partners/A4P07-02-2025_15-36-26avision-removebg-preview.png" alt="Avision">
+            </div>
+            <div class="partner-logo">
+              <img src="assets/img/partners/MARSA_MAROC_LOGO_C_ENG-1-removebg-preview.png" alt="Marsa Maroc">
+            </div>
+            <div class="partner-logo">
+              <img src="assets/img/partners/Men_2021-removebg-preview.png" alt="Ministère de l'Éducation Nationale">
             </div>
           </div>
         </div>
